--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "start": "vite --force",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.25",
-    "vue-class-component": "https://github.com/vuejs/vue-class-component#next",
+    "vue-class-component": "vue-class-component@8.0.0-rc.1",
     "vue-property-decorator": "npm:@smyld/vue-property-decorator@^10.0.17"
   },
   "devDependencies": {
