--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-.vscode
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.jsongu
+build/local.json
 .idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+yarn-error.log
+node_modules
+cypress/videos
+dist
+build/stats.html
