--- a/package.json
+++ b/package.json
@@ -1,21 +1,104 @@
 {
-  "name": "vite-project",
-  "private": true,
+  "name": "hc360-web-user",
   "version": "0.0.0",
+  "description": "Client hc360 app",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "vite --force",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "build:test": "VITE_BUILD_ENV=test vite build",
+    "build:run": "run-s -c build build:serve",
+    "build:serve": "servor dist index.html 8080",
+    "build:analyze": "ANALYZE=true vite build",
+    "test:cypress:open": "TZ=UTC cypress open",
+    "test:cypress:run": "TZ=UTC start-server-and-test 'servor dist index.html 8080' 8080 'cypress run --headless'",
+    "test:cypress:run:ci": "TZ=UTC start-server-and-test 'servor dist index.html 8080' 8080 'currents run --headless --record --parallel --key $CURRENTS_KEY --ci-build-id $BITBUCKET_BUILD_NUMBER'",
+    "test": "run-s -c build:test test:cypress:run",
+    "test:ci": "run-s -c build:test test:cypress:run:ci",
+    "lint:es:fix": "run-s -c lint:es:src:fix lint:es:cypress:fix",
+    "lint:es:src:fix": "eslint --fix --ext .ts,.vue src",
+    "lint:es:cypress:fix": "eslint -c ./cypress/.eslintrc.json --fix --ext .ts cypress",
+    "lint:style": "stylelint 'src/**/*.vue'",
+    "lint:es:src": "eslint --ext .ts,.vue --max-warnings=0 src",
+    "lint:es:cypress": "eslint -c ./cypress/.eslintrc.json --ext .ts --max-warnings=0 cypress",
+    "lint:es": "run-s -c lint:es:src lint:es:cypress",
+    "lint:new": "eslint-find-rules -u ./.eslintrc.json",
+    "lint": "run-s -c lint:style lint:es",
+    "autoformat:es": "eslint --fix --ext .ts,.vue src",
+    "autoformat:style": "stylelint 'src/**/*.vue' 'src/**/*.sass' --fix",
+    "autoformat": "run-s -c autoformat:es autoformat:style"
   },
-  "dependencies": {
-    "vue": "^3.2.25",
-    "vue-class-component": "vue-class-component@8.0.0-rc.1",
-    "vue-property-decorator": "npm:@smyld/vue-property-decorator@^10.0.17"
+  "repository": {
+    "type": "git",
+    "url": "git@bitbucket.org:ireward/hc360-web-user.git"
+  },
+  "license": "Unlicense",
+  "engines": {
+    "node": ">=16.0.0 <17",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.17.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0",
-    "vue-tsc": "^0.29.8"
+    "@babel/core": "^7.19.3",
+    "@babel/types": "^7.18.13",
+    "@cypress/code-coverage": "^3.10.0",
+    "@types/chrome": "^0.0.195",
+    "@types/jest": "^29.0.0",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "babel-loader": "^8.2.5",
+    "cypress": "^10.8.0",
+    "cypress-match-screenshot": "^1.1.0",
+    "cypress-multi-reporters": "^1.6.1",
+    "cypress-promise": "^1.1.0",
+    "eslint": "^8.23.0",
+    "eslint-find-rules": "^4.1.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-sonarjs": "^0.15.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "jest": "^29.0.1",
+    "npm-run-all": "^4.1.5",
+    "patch-package": "^6.4.7",
+    "rollup-plugin-visualizer": "^5.8.0",
+    "sass": "^1.54.5",
+    "servor": "^4.0.2",
+    "start-server-and-test": "^1.14.0",
+    "stylelint": "13.7.2",
+    "stylelint-order": "4.1.0",
+    "stylelint-scss": "3.18.0",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vite-plugin-checker": "^0.5.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-static-copy": "^0.8.0",
+    "vite-plugin-vue-inspector": "^1.1.1",
+    "vue-loader": "^16.8.3",
+    "vue-tsc": "^0.40.2",
+    "@currents/cli": "^3.0.0"
+  },
+  "dependencies": {
+    "@fontsource/asap": "^4.5.8",
+    "@fontsource/montserrat": "^4.5.12",
+    "@fontsource/roboto": "^4.5.8",
+    "is-mobile": "3.1.1",
+    "lines-logger": "^2.1.2",
+    "lodash.debounce": "^4.0.8",
+    "markdown-it": "^13.0.1",
+    "reflect-metadata": "0.1.13",
+    "vue": "^3.2.37",
+    "vue-class-component": "https://github.com/vuejs/vue-class-component#next",
+    "vue-property-decorator": "npm:@smyld/vue-property-decorator@^10.0.17",
+    "vue-router": "^4.1.5",
+    "vue3-popper": "^1.5.0",
+    "vuex": "^4.0.2",
+    "vuex-module-decorators": "^2.0.0"
   }
 }
