--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hc360-web-user",
+  "name": "vue3-vite-vue-class-component",
   "version": "0.0.0",
   "description": "Client hc360 app",
   "scripts": {
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/types": "^7.18.13",
+    "@currents/cli": "^3.0.0",
     "@cypress/code-coverage": "^3.10.0",
     "@types/chrome": "^0.0.195",
     "@types/jest": "^29.0.0",
@@ -81,8 +82,7 @@
     "vite-plugin-static-copy": "^0.8.0",
     "vite-plugin-vue-inspector": "^1.1.1",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.40.2",
-    "@currents/cli": "^3.0.0"
+    "vue-tsc": "^0.40.2"
   },
   "dependencies": {
     "@fontsource/asap": "^4.5.8",
@@ -98,6 +98,7 @@
     "vue-property-decorator": "npm:@smyld/vue-property-decorator@^10.0.17",
     "vue-router": "^4.1.5",
     "vue3-popper": "^1.5.0",
+    "vuetify": "^3.1.5",
     "vuex": "^4.0.2",
     "vuex-module-decorators": "^2.0.0"
   }
