--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "lib": ["esnext", "dom"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "skipLibCheck": false
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
   "exclude": ["src/**/*.cy.ts", "src/stories"],
