--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-vite-vue-class-component",
   "version": "0.0.0",
-  "description": "Client hc360 app",
+  "description": "Vue3 project started with vuetify, vite in class-component-style",
   "scripts": {
     "postinstall": "patch-package",
     "start": "vite --force",
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:ireward/hc360-web-user.git"
+    "url": "git@github.com/akoidan/vue3-vite-vue-class-component"
   },
   "license": "Unlicense",
   "engines": {
